log/build_2024-12-05_20-26-29/manager/stdout_stderr.log
running egg_info
writing ../../build/manager/manager.egg-info/PKG-INFO
writing dependency_links to ../../build/manager/manager.egg-info/dependency_links.txt
writing entry points to ../../build/manager/manager.egg-info/entry_points.txt
writing requirements to ../../build/manager/manager.egg-info/requires.txt
writing top-level names to ../../build/manager/manager.egg-info/top_level.txt
reading manifest file '../../build/manager/manager.egg-info/SOURCES.txt'
writing manifest file '../../build/manager/manager.egg-info/SOURCES.txt'
running build
running build_py
copying manager/manager.py -> /home/robot/human_ws/build/manager/build/lib/manager
running install
running install_lib
copying /home/robot/human_ws/build/manager/build/lib/manager/manager.py -> /home/robot/human_ws/install/manager/lib/python3.10/site-packages/manager
byte-compiling /home/robot/human_ws/install/manager/lib/python3.10/site-packages/manager/manager.py to manager.cpython-310.pyc
  File "/home/robot/human_ws/install/manager/lib/python3.10/site-packages/manager/manager.py", line 237
    vel.angular.z = 0.25 if self.pixel_x not None and self.pixel_x<320 else -0.25
                    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected 'else' after 'if' expression

running install_data
running install_egg_info
removing '/home/robot/human_ws/install/manager/lib/python3.10/site-packages/manager-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/manager/manager.egg-info to /home/robot/human_ws/install/manager/lib/python3.10/site-packages/manager-0.0.0-py3.10.egg-info
running install_scripts
Installing manager_node script to /home/robot/human_ws/install/manager/lib/manager
writing list of installed files to '/home/robot/human_ws/build/manager/install.log'
